--- a/sass/style-sass.css
+++ b/sass/style-sass.css
@@ -16,4 +16,206 @@
 }
 .flex-container-1 .flex-item-1 a {
   color: white;
+}
+
+.section {
+  background: radial-gradient(black, grey);
+  width: 100%;
+  height: 400px;
+  gap: 0px;
+  margin-top: -30px;
+}
+
+.flex-container-2 {
+  padding-top: 100px;
+  display: flex;
+  flex-direction: row; /* responsive column */
+  -webkit-animation: animacion-desafio-sass 20s linear 0s infinite;
+          animation: animacion-desafio-sass 20s linear 0s infinite;
+}
+.flex-container-2 .flex-item-2 {
+  width: 30%;
+  height: 200px;
+  background: radial-gradient(black, grey);
+  color: white;
+  padding: 50px 20px;
+  margin: 20px;
+}
+.flex-container-2 .flex-item-2 h2 {
+  padding-top: 100px;
+}
+
+.flex-container-3 {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  gap: 10px;
+  padding-top: 250px;
+  -webkit-animation: animacion-desafio-sass 20s linear 0s infinite;
+          animation: animacion-desafio-sass 20s linear 0s infinite;
+}
+.flex-container-3 .flex-item-3 {
+  width: 30%;
+  height: 150px;
+  background: radial-gradient(black, grey);
+  color: white;
+  margin-left: 180px;
+  margin-bottom: 100px;
+  padding-left: 200px;
+}
+.flex-container-3 .flex-item-3 a {
+  color: white;
+}
+
+@media (max-width: 768px) {
+  .flex-container-1 {
+    background-color: green;
+    width: 700px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 30px;
+    -webkit-animation: animacion-desafio-sass 20s linear 0s infinite;
+            animation: animacion-desafio-sass 20s linear 0s infinite;
+  }
+  .flex-container-1 .flex-item-1 {
+    width: 20%;
+    height: 150px;
+    margin-left: 5px;
+    padding-left: 1px;
+    padding-top: 2px;
+  }
+  .flex-container-1 .flex-item-1 a {
+    color: white;
+  }
+  .section {
+    background: radial-gradient(black, grey);
+    width: 700px;
+    height: 400px;
+    gap: 0px;
+    margin-top: -30px;
+  }
+  .flex-container-2 {
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column; /* responsive column */
+    -webkit-animation: animacion-desafio-sass 20s linear 0s infinite;
+            animation: animacion-desafio-sass 20s linear 0s infinite;
+  }
+  /* footer */
+  .flex-container-3 {
+    width: 700px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding-top: 1250px;
+    -webkit-animation: animacion-desafio-sass 20s linear 0s infinite;
+            animation: animacion-desafio-sass 20s linear 0s infinite;
+  }
+  .flex-container-3 .flex-item-3 {
+    width: 40%;
+    height: 250px;
+    background: radial-gradient(black, grey);
+    color: white;
+    margin-left: 30px;
+    margin-bottom: 150px;
+    padding-left: 10px;
+    padding-bottom: 20px;
+  }
+  .flex-container-3 .flex-item-3 a {
+    color: white;
+  }
+  @-webkit-keyframes animacion-desafio-sass {
+    0% {
+      background-color: black;
+    }
+    15% {
+      background-color: rgb(0, 61, 9);
+    }
+    30% {
+      background-color: rgb(0, 105, 16);
+    }
+    50% {
+      background-color: rgb(0, 189, 28);
+    }
+    70% {
+      background-color: rgb(0, 189, 28);
+    }
+    85% {
+      background-color: rgb(0, 105, 16);
+    }
+    100% {
+      background-color: rgb(0, 61, 9);
+    }
+  }
+  @keyframes animacion-desafio-sass {
+    0% {
+      background-color: black;
+    }
+    15% {
+      background-color: rgb(0, 61, 9);
+    }
+    30% {
+      background-color: rgb(0, 105, 16);
+    }
+    50% {
+      background-color: rgb(0, 189, 28);
+    }
+    70% {
+      background-color: rgb(0, 189, 28);
+    }
+    85% {
+      background-color: rgb(0, 105, 16);
+    }
+    100% {
+      background-color: rgb(0, 61, 9);
+    }
+  }
+}
+@-webkit-keyframes animacion-desafio-sass {
+  0% {
+    background-color: black;
+  }
+  15% {
+    background-color: rgb(0, 61, 9);
+  }
+  30% {
+    background-color: rgb(0, 105, 16);
+  }
+  50% {
+    background-color: rgb(0, 189, 28);
+  }
+  70% {
+    background-color: rgb(0, 189, 28);
+  }
+  85% {
+    background-color: rgb(0, 105, 16);
+  }
+  100% {
+    background-color: rgb(0, 61, 9);
+  }
+}
+@keyframes animacion-desafio-sass {
+  0% {
+    background-color: black;
+  }
+  15% {
+    background-color: rgb(0, 61, 9);
+  }
+  30% {
+    background-color: rgb(0, 105, 16);
+  }
+  50% {
+    background-color: rgb(0, 189, 28);
+  }
+  70% {
+    background-color: rgb(0, 189, 28);
+  }
+  85% {
+    background-color: rgb(0, 105, 16);
+  }
+  100% {
+    background-color: rgb(0, 61, 9);
+  }
 }/*# sourceMappingURL=style-sass.css.map */
